--- a/devtools/td-layout-config/config_image.json
+++ b/devtools/td-layout-config/config_image.json
@@ -1,10 +1,10 @@
 {
-    "CONFIG": "0x040000",
-    "MAILBOX": "0x001000",
-    "TEMP_STACK": "0x020000",
-    "TEMP_HEAP": "0x020000",
-    "METADATA": "0x001000",
-    "PAYLOAD": "0xC2D000",
-    "IPL": "0x348000",
-    "RESET_VECTOR": "0x008000"
+    "Config": "0x040000",
+    "Mailbox": "0x001000",
+    "TempStack": "0x020000",
+    "TempHeap": "0x020000",
+    "Metadata": "0x001000",
+    "Payload": "0xC2D000",
+    "Ipl": "0x348000",
+    "ResetVector": "0x008000"
 }
