introduce xtask to build image
`xtask` is a pattern for the rust project automation, it
can simplify the build process of td-shim image without
dependent on any software other than `rustc` and `cargo`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "tests/test-td-exception",
     "tests/test-td-paging",
     "tests/test-td-payload",
+    "xtask",
 ]
 
 # the profile used for `cargo build`
