--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -61,8 +61,7 @@ byteorder = { version = "1.4.3", optional = true }
 parse_int = { version = "0.6.0", optional = true }
 
 [features]
-default = ["boot-kernel", "enroller", "linker", "signer", "loader", "tee"]
-boot-kernel = ["td-layout/boot-kernel", "td-shim/boot-kernel"]
+default = ["enroller", "linker", "signer", "loader", "tee"]
 enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 linker = ["clap", "env_logger", "log", "parse_int", "serde_json", "serde", "td-loader"]
 signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
