CI: use `cargo image` to build td-shim image
Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Build image without payload
         run: |
-          cargo run -p td-shim-tools --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -o target/release/final.bin
+          cargo image --release
       
       - name: Meta data check
         run: |
@@ -90,10 +90,8 @@ jobs:
 
       - name: Build Release Elf format payload
         run: |
-          cargo xbuild -p td-payload --target x86_64-unknown-none --release --bin example --features=tdx,start,cet-shstk,stack-guard
-          cargo run -p td-shim-tools --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -t executable -p target/x86_64-unknown-none/release/example -o target/release/final-elf.bin
+          cargo image --example-payload --release
 
       - name: Build Debug Elf format payload
         run: |
-          cargo xbuild -p td-payload --bin example --target x86_64-unknown-none --bin example --features=tdx,start,cet-shstk,stack-guard
-          cargo run -p td-shim-tools --bin td-shim-ld -- target/x86_64-unknown-none/debug/ResetVector.bin target/x86_64-unknown-none/debug/td-shim -t executable -p target/x86_64-unknown-none/debug/example -o target/debug/final-elf.bin
+          cargo image --example-payload
