use `[patch.crates-io]` for ring
Remove the `path` of patched ring in Cargo.toml to avoid the conflict
when other crates use `td-shim` or `cc-measurement` and `ring` at the same
time.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ lto = true
 [profile.release]
 panic = "abort"    # disable stack unwinding on panic
 lto = true         # Link-time optimization
+
+[patch.crates-io]
+ring = { path = "library/ring" }
