--- a/cc-measurement/Cargo.toml
+++ b/cc-measurement/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 sha2 = { version = "0.10.6", default-features = false, features = ["force-soft"], optional = true }
-ring = { path = "../library/ring", default-features = false, features = ["alloc"], optional = true }
+ring = { version = "0.16.20", default-features = false, features = ["alloc"], optional = true }
 zerocopy = "0.6.0"
 
 [features]
