install `cargo-afl` instead of `afl`
According to https://github.com/rust-fuzz/afl.rs, it requires user
to install `cargo-afl` binary.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: afl
+          args: cargo-afl
         if: runner.os == 'Linux'
       
       - name: Install Cargo-Fuzz (Linux)
