--- a/.github/workflows/integration-tdx.yml
+++ b/.github/workflows/integration-tdx.yml
@@ -60,7 +60,8 @@ jobs:
           bash sh_script/integration_tdx.sh -c 2 -m 4G -f target/release/final-boot-kernel.bin
           bash sh_script/integration_tdx.sh -c 4 -m 8G -f target/release/final-boot-kernel.bin
           bash sh_script/integration_tdx.sh -c 8 -m 16G -f target/release/final-boot-kernel.bin
-          bash sh_script/integration_tdx.sh -c 16 -m 32G -f target/release/final-boot-kernel.bin
+          bash sh_script/integration_tdx.sh -c 16 -m 16G -f target/release/final-boot-kernel.bin
+          # bash sh_script/integration_tdx.sh -c 16 -m 32G -f target/release/final-boot-kernel.bin
       
       - name: Build ELF format payload with test TD payload
         run: bash sh_script/build_final.sh elf_test
