use `Dockerfile` for reproducible build
The reproducibility of td-shim is limited by the same system user and
source code path, so we can use Docker container to reproduce binaries.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/devtools/dev_container/Dockerfile
+++ b/devtools/dev_container/Dockerfile
@@ -37,3 +37,5 @@ RUN set -eux; \
     git clone https://github.com/sslab-gatech/Rudra.git; \
     cd Rudra; \
     ./install-release.sh;
+
+RUN git clone https://github.com/confidential-containers/td-shim.git
