--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -21,7 +21,7 @@ required-features = ["signer"]
 
 [[bin]]
 name = "td-shim-checker"
-required-features = ["loader", "read_file"]
+required-features = ["loader"]
 
 [[bin]]
 name = "td-shim-strip-info"
@@ -61,12 +61,11 @@ byteorder = { version = "1.4.3", optional = true }
 parse_int = { version = "0.6.0", optional = true }
 
 [features]
-default = ["enroller", "linker", "signer", "loader", "tee", "calculator", "read_file"]
+default = ["enroller", "linker", "signer", "loader", "tee", "calculator"]
 enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 linker = ["clap", "env_logger", "log", "parse_int", "serde_json", "serde", "td-loader"]
 signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
-loader = ["clap", "env_logger", "log"]
-read_file = ["clap", "env_logger", "log", "anyhow"]
+loader = ["clap", "env_logger", "log", "anyhow"]
 tee = ["clap", "env_logger", "log", "serde_json", "serde", "hex", "sha2", "byteorder"]
 calculator = ["clap", "hex", "parse_int", "sha2", "anyhow", "block-padding"]
 exec-payload-section = []
