--- a/td-shim-interface/fuzz/Cargo.toml
+++ b/td-shim-interface/fuzz/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name = "td-uefi-pi-fuzz"
+name = "td-shim-interface-fuzz"
 version = "0.0.0"
 authors = ["Automatically generated"]
 publish = false
@@ -15,7 +15,7 @@ afl = {version = "*", optional = true }
 r-efi = "3.2.0"
 arbitrary = "=1.1.3"
 
-[dependencies.td-uefi-pi]
+[dependencies.td-shim-interface]
 path = ".."
 
 # Prevent this from interfering with workspaces
