--- a/devtools/test-runner-server/Cargo.toml
+++ b/devtools/test-runner-server/Cargo.toml
@@ -8,7 +8,6 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
 clap = { version = "4.0", features = ["cargo"] }
-locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`
 runner-utils = "0.0.2" # small helper functions for custom runners (e.g. timeouts)
+serde_json = "1.0.114"
