td-layout-config: load payload image into physical memory space
The old implementation loads the payload image into ROM space which
limited the size of the payload to be smaller than 16MiB.

The previous layout 1:1 maps the image to the ROM space. As we move
payload to physical memory space, ROM layout and image layout will be
different in td-layout-config tool.

The default image config is adjusted to generate a 16MiB image by
default.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/devtools/td-layout-config/config_memory_exec.json
+++ b/devtools/td-layout-config/config_memory_exec.json
@@ -11,6 +11,11 @@
             "type": "Memory"
         },
         {
+            "name": "PayloadImage",
+            "size": "0xC2D000",
+            "type": "Memory"
+        },
+        {
             "name": "EventLog",
             "size": "0x100000",
             "type": "Nvs"
