td-layout: update source code based on new layout
Payload image is loaded into physical memory space so the functions
under memslice are updated and the metadata is updated.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/devtools/td-layout-config/config_memory_exec.json
+++ b/devtools/td-layout-config/config_memory_exec.json
@@ -11,7 +11,7 @@
             "type": "Memory"
         },
         {
-            "name": "PayloadImage",
+            "name": "ShimPayload",
             "size": "0xC2D000",
             "type": "Memory"
         },
