--- a/devtools/td-layout-config/config_memory_exec.json
+++ b/devtools/td-layout-config/config_memory_exec.json
@@ -11,6 +11,11 @@
             "type": "Memory"
         },
         {
+            "name": "LargePayload",
+            "size": "0x0",
+            "type": "Memory"
+        },
+        {
             "name": "EventLog",
             "size": "0x100000",
             "type": "Nvs"
