ci: replace `actions-rs/toolchain` with `dtolnay/rust-toolchain`
`self-update` of rustup forced by `actions-rs/toolchain` causes failure on
Windows.

As action-rs/toolchain is not maintained, switch to dtolnay/rust-toolchain.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/devtools.yml
+++ b/.github/workflows/devtools.yml
@@ -42,18 +42,14 @@ jobs:
           submodules: recursive
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: ${{ env.TOOLCHAIN_PROFILE }}
           toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
-          override: true
 
       - name: Install nightly toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: ${{ env.TOOLCHAIN_PROFILE }}
           toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
-          override: true
 
       - name: Preparation work
         run: make preparation
