--- a/td-loader/fuzz/Cargo.toml
+++ b/td-loader/fuzz/Cargo.toml
@@ -13,6 +13,7 @@ libfuzzer-sys = {version = "0.4", optional = true }
 afl = {version = "*", optional = true }
 log = "0.4.13"
 arbitrary = "=1.1.3"
+serde = "=1.0.198"
 
 [dependencies.td-loader]
 path = ".."
