--- a/td-shim/fuzz/Cargo.toml
+++ b/td-shim/fuzz/Cargo.toml
@@ -14,6 +14,7 @@ libfuzzer-sys = {version = "0.4", optional = true }
 afl = {version = "*", optional = true }
 r-efi = "3.2.0"
 arbitrary = "=1.1.3"
+serde = "=1.0.198"
 
 [dependencies.td-shim]
 path = ".."
