Change schedule of cargo-deny to daily run
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/deny.yml
+++ b/.github/workflows/deny.yml
@@ -1,5 +1,13 @@
 name: cargo-deny
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ "main" ]
+  schedule:
+    - cron: '0 0 * * *'
+
 jobs:
   cargo-deny:
     runs-on: ubuntu-20.04
