ci: install cargo-fuzz with stable toolchain
The rustc version 1.77.0-nightly does not meet the requirement of
`cargo-platform v0.1.9`. Use latest stable toolchain to install the
`cargo-fuzz`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -46,7 +46,7 @@ jobs:
         if: runner.os == 'Linux'
       
       - name: Install Cargo-Fuzz (Linux)
-        run: cargo install cargo-fuzz
+        run: cargo +stable install cargo-fuzz
         if: runner.os == 'Linux'
       
       - name: Preparation work
