--- a/devtools/test-runner-client/Cargo.toml
+++ b/devtools/test-runner-client/Cargo.toml
@@ -11,4 +11,4 @@ edition = "2018"
 linked_list_allocator = "0.10.4"
 spin = { version = "0.9.2", features = ["lazy"]}
 uart_16550 = "0.2.17"
-x86_64 = "0.14.9"
+x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"] }
