--- a/td-paging/Cargo.toml
+++ b/td-paging/Cargo.toml
@@ -14,4 +14,4 @@ spin = "0.9.2"
 td-layout = { path = "../td-layout" }
 # Lock down to 0.44, otherwise it depends on inline asm
 x86 = "0.47.0"
-x86_64 = "0.14.9"
+x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"] }
