--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -36,8 +36,7 @@ td-exception =  { path = "../td-exception", features = ["tdx"], optional = true 
 td-logger =  { path = "../td-logger", optional = true }
 td-paging = { path = "../td-paging", optional = true }
 x86 = { version ="0.47.0", optional = true }
-# Lock down to 0.44, otherwise it depends on inline asm
-x86_64 = { version = "0.14.9", optional = true }
+x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"], optional = true }
 
 # secure boot
 der = {version = "0.4.5", features = ["derive", "alloc"], optional = true}
