--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ env:
   CC_x86_64_unknown_linux_gnu: clang
   AR_x86_64_unknown_none: llvm-ar
   CC_x86_64_unknown_none: clang
-  RUST_TOOLCHAIN: nightly-2023-12-31
+  RUST_TOOLCHAIN: 1.83.0
   TOOLCHAIN_PROFILE: minimal
 
 jobs:
@@ -51,8 +51,8 @@ jobs:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
           components: rust-src
 
-      - name: Run cargo install cargo-xbuild
-        run: cargo install cargo-xbuild
+      - name: Add `x86_64-unknown-none` target
+        run: rustup target add x86_64-unknown-none
       
       - name: Preparation Work
         run: bash sh_script/preparation.sh
@@ -61,10 +61,10 @@ jobs:
         run: make test 
 
       - name: Build Release TdShim
-        run: cargo xbuild -p td-shim --target x86_64-unknown-none --release --features=main,tdx
+        run: cargo build -p td-shim --target x86_64-unknown-none --release --features=main,tdx
       
       - name: Build Debug TdShim
-        run: cargo xbuild -p td-shim --target x86_64-unknown-none --features=main,tdx --no-default-features
+        run: cargo build -p td-shim --target x86_64-unknown-none --features=main,tdx --no-default-features
 
       - name: Build td-shim-tools
         run: |
