--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release TD-shim
 on: create
 
 env:
-  RUST_TOOLCHAIN: nightly-2023-12-31
+  RUST_TOOLCHAIN: 1.83.0
   TOOLCHAIN_PROFILE: minimal
 
 jobs:
@@ -33,8 +33,8 @@ jobs:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
           components: rust-src
 
-      - name: Run cargo install cargo-xbuild
-        run: cargo install cargo-xbuild
+      - name: Add `x86_64-unknown-none` target
+        run: rustup target add x86_64-unknown-none
 
       - name: Preparation Work
         run: make preparation
