--- a/devtools/dev_container/Dockerfile
+++ b/devtools/dev_container/Dockerfile
@@ -17,18 +17,16 @@ RUN apt-get update && \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install rustup and a fixed version of Rust.
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain nightly-2023-12-31
-RUN rustup toolchain install 1.75.0
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.83.0
 RUN rustup component add rust-src
 RUN rustup component add llvm-tools-preview
 COPY cargo_config /root/.cargo/config
 RUN cargo install cargo-xbuild
 
 # Install fuzzing tools
-# The rust version used now is nightly-2021-08-20, the latest cargo-fuzz needs to be upgraded to the rust version, and nightly-2021-08-20 can use cargo-fuzz 0.10.2 . 
 # For more information, please see doc/fuzzing.md.
 RUN cargo install cargo-afl
-RUN cargo install cargo-fuzz --version 0.10.2
+RUN cargo install cargo-fuzz --version 0.12.0
 
 # Install rudra
 RUN rustup component add rustc-dev
