--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -44,7 +44,7 @@ jobs:
         if: runner.os == 'Linux'
       
       - name: Install Cargo-Fuzz (Linux)
-        run: cargo install cargo-fuzz
+        run: cargo +nightly install cargo-fuzz
         if: runner.os == 'Linux'
       
       - name: Preparation work
