tests: switch to `bootloader_api` crate
Replace the `bootloader` dependency of the test cases with a dependency on
the `bootloader_api` crate and adjust the import path.

Use the disk image creation functions provided by `bootloader` crate to
create bootable disk images from a kernel in `test-runner-server`.

Since the `x86_64-unknown-none` target is a Tier-2 target, there is no
need for `bootimage`, `cargo-xbuild`, or `xargo` anymore. Replace the
`xtest`, `xbuild` and `xcheck` with `test`, `build` and `check` in
`Makefile` and update the alias in `config.toml`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,9 +2,9 @@
 runner = "cargo run --package test-runner-server --"
 
 [alias]
-kbuild = "build --target x86_64-custom.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem"
-kimage = "run --target x86_64-custom.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem -- --no-run"
-krun = "run --target x86_64-custom.json -Zbuild-std=core -Zbuild-std-features=compiler-builtins-mem"
-ktest = "xtest --target x86_64-custom.json"
+kbuild = "build --target x86_64-unknown-none"
+kimage = "run --target x86_64-unknown-none -- --no-run"
+krun = "run --target x86_64-unknown-none"
+ktest = "test --target x86_64-unknown-none"
 xtask = "run -p xtask --"
 image = "xtask image"
