ci: reopen integration test
Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -66,5 +66,5 @@ jobs:
       - name: Preparation Work
         run: make preparation
 
-      # - name: Run Tests
-      #   run: make integration-test
+      - name: Run Tests
+        run: make integration-test
