.cargo/config.toml: enforce static relocation model for x86_64-unknown-none
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,3 +8,6 @@ krun = "run --target x86_64-custom.json -Zbuild-std=core -Zbuild-std-features=co
 ktest = "xtest --target x86_64-custom.json"
 xtask = "run -p xtask --"
 image = "xtask image"
+
+[target.x86_64-unknown-none]
+rustflags = [ "-Crelocation-model=static" ]
