--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -18,6 +18,7 @@ spin = "0.9.2"
 x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"] }
 
 [features]
-default = []
+default = ["tdcall", "tdvmcall"]
 use_tdx_emulation = []
 tdvmcall = []
+tdcall = []
