--- a/td-exception/Cargo.toml
+++ b/td-exception/Cargo.toml
@@ -17,5 +17,6 @@ spin = "0.9.2"
 
 [features]
 cet-shstk = []
-tdx = ["tdx-tdcall"]
+tdcall = ["tdx-tdcall/tdcall"]
+tdvmcall = ["tdx-tdcall/tdvmcall"]
 integration-test = []
