--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,18 +53,18 @@ jobs:
 
       - name: Add `x86_64-unknown-none` target
         run: rustup target add x86_64-unknown-none
-      
+
       - name: Preparation Work
         run: bash sh_script/preparation.sh
 
       - name: Test Shim Crates
-        run: make test 
+        run: make test
 
       - name: Build Release TdShim
-        run: cargo build -p td-shim --target x86_64-unknown-none --release --features=main,tdx
-      
+        run: cargo build -p td-shim --target x86_64-unknown-none --release --features=main,tdcall,tdvmcall
+
       - name: Build Debug TdShim
-        run: cargo build -p td-shim --target x86_64-unknown-none --features=main,tdx --no-default-features
+        run: cargo build -p td-shim --target x86_64-unknown-none --features=main,tdcall,tdvmcall --no-default-features
 
       - name: Build td-shim-tools
         run: |
@@ -73,7 +73,7 @@ jobs:
       - name: Build image without payload
         run: |
           cargo image --release
-      
+
       - name: Meta data check
         run: |
           cargo run -p td-shim-tools --bin td-shim-checker  --no-default-features --features=loader -- target/release/final.bin
