--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -49,6 +49,7 @@ default = ["secure-boot"]
 secure-boot = ["der", "ring"]
 tdcall = ["tdx-tdcall/tdcall", "td-exception/tdcall", "x86"]
 tdvmcall = ["tdx-tdcall/tdvmcall", "td-exception/tdvmcall", "td-logger/tdvmcall", "x86"]
+tdx = ["tdcall", "tdvmcall"]
 lazy-accept = ["tdcall"]
 ring-hash = ["cc-measurement/ring"]
 sha2-hash = ["cc-measurement/sha2"]
