td-shim: support loading payload for each vCPU
When feature `multi-payload` is enabled, td-shim will load a payload
binary for each vCPU, and it will also evenly divide the largest
contiguous available memory among each vCPU, generating the e820 table
and HOB for them.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -51,6 +51,7 @@ tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 lazy-accept = ["tdx"]
 ring-hash = ["cc-measurement/ring"]
 sha2-hash = ["cc-measurement/sha2"]
+multi-payload = []
 main = [
     "log",
     "td-loader",
