tdx-tdcall: introduce no-tdvmcall feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tdx-tdcall"
-version = "0.2.1"
+version = "0.2.2"
 description = "Constants, stuctures and wrappers to access TDCALL services"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
@@ -11,6 +11,7 @@ readme = "README.md"
 keywords = ["TDCALL", "TDX", "intel"]
 
 [dependencies]
+cfg-if = "1.0.0"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = "0.4.13"
 scroll = { version = "0.10", default-features = false, features = ["derive"] }
@@ -20,3 +21,4 @@ x86_64 = { version = "0.14.9", default-features = false, features = ["instructio
 [features]
 default = []
 use_tdx_emulation = []
+no-tdvmcall = []
