td-logger: introduce no-tdvmcall feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-logger/Cargo.toml
+++ b/td-logger/Cargo.toml
@@ -18,3 +18,4 @@ x86 = { version = "0.47.0", optional = true }
 [features]
 tdx = ["tdx-tdcall"]
 serial-port = ["x86"]
+no-tdvmcall = ["tdx-tdcall/no-tdvmcall"]
