td-shim: introduce no-tdaccept feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -52,6 +52,7 @@ lazy-accept = ["tdx"]
 ring-hash = ["cc-measurement/ring"]
 sha2-hash = ["cc-measurement/sha2"]
 no-tdvmcall = ["tdx-tdcall/no-tdvmcall", "td-logger/no-tdvmcall", "td-exception/no-tdvmcall"]
+no-tdaccept = ["tdx-tdcall/no-tdaccept"]
 
 main = [
     "log",
