--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -22,3 +22,4 @@ x86_64 = { version = "0.14.9", default-features = false, features = ["instructio
 default = []
 use_tdx_emulation = []
 no-tdvmcall = []
+no-tdaccept = []
