td-shim-interface: introduce no-metadata-checks feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-shim-interface/Cargo.toml
+++ b/td-shim-interface/Cargo.toml
@@ -16,3 +16,6 @@ scroll = { version = "0.10", default-features = false, features = ["derive"] }
 zerocopy = { version = "0.7.31", features = ["derive"] }
 
 log = "0.4.13"
+
+[features]
+no-metadata-checks = []
