--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -53,6 +53,7 @@ ring-hash = ["cc-measurement/ring"]
 sha2-hash = ["cc-measurement/sha2"]
 no-tdvmcall = ["tdx-tdcall/no-tdvmcall", "td-logger/no-tdvmcall", "td-exception/no-tdvmcall"]
 no-tdaccept = ["tdx-tdcall/no-tdaccept"]
+no-metadata-checks = ["td-shim-interface/no-metadata-checks"]
 
 main = [
     "log",
