tdx-tdcall: introduce new feature tdg_dbg
This commit adds a new debug-only ABI support:
TDCALL[TDG.DEBUG], to be used only with debug TDX Module

Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tdx-tdcall"
-version = "0.2.2"
+version = "0.2.3"
 description = "Constants, stuctures and wrappers to access TDCALL services"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
@@ -23,3 +23,4 @@ default = []
 use_tdx_emulation = []
 no-tdvmcall = []
 no-tdaccept = []
+tdg_dbg = []
