--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -54,6 +54,7 @@ sha2-hash = ["cc-measurement/sha2"]
 no-tdvmcall = ["tdx-tdcall/no-tdvmcall", "td-logger/no-tdvmcall", "td-exception/no-tdvmcall"]
 no-tdaccept = ["tdx-tdcall/no-tdaccept"]
 no-metadata-checks = ["td-shim-interface/no-metadata-checks"]
+tdg_dbg = ["td-logger/tdg_dbg"]
 
 main = [
     "log",
