Upgrade ubuntu to latest
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/devtools.yml
+++ b/.github/workflows/devtools.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         host_os:
-          - ubuntu-20.04
+          - ubuntu-latest
           - windows-2019
     steps:
       - name: Install LLVM and Clang
