td-layout: introduce no-mailbox and no-config features
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-layout/Cargo.toml
+++ b/td-layout/Cargo.toml
@@ -8,6 +8,8 @@ license = "BSD-2-Clause-Patent"
 edition = "2018"
 
 [features]
+no-config = []
+no-mailbox = []
 
 [dependencies]
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
