--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -59,6 +59,8 @@ hex = { version = "0.4", features = ["serde"], optional = true }
 sha2 = { version = "0.10.2", optional = true }
 byteorder = { version = "1.4.3", optional = true }
 parse_int = { version = "0.6.0", optional = true }
+igvm = "0.3.4"
+igvm_defs = "0.3.4"
 
 [features]
 default = ["enroller", "linker", "signer", "loader", "tee", "calculator"]
